manifests/apps/kasm/brave/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: brave
  namespace: apps
  labels:
    app: brave
spec:
  serviceName: brave
  replicas: 1
  selector:
    matchLabels:
      app: brave
  template:
    metadata:
      labels:
        app: brave
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: brave
          image: kasmweb/brave:1.18.0@sha256:305780560fe87ef06c1ed8c56cd91af2344bc5dfa281e4961a1174604a298448
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: dshm
              mountPath: /dev/shm
            - name: brave-config
              mountPath: /home/kasm-user
          ports:
            - containerPort: 6901
      volumes:
        - name: dshm
          emptyDir:
            medium: Memory
  volumeClaimTemplates:
    - metadata:
        name: brave-config
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 2Gi
        storageClassName: longhorn
